--- a/IndyGo/platforms/browser/www/index.html
+++ b/IndyGo/platforms/browser/www/index.html
@@ -108,11 +108,11 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
     <div id="stationInfor">
         <table>
             <tr>
-                <td id = "tLeft1" class="tLeft1">11<br>Bikes</td>
-                <td id="infoBx" class="tRight" colspan="2" rowspan="2"><div class="tableTitle">[INSERT TITLE VAR]</div>[INSERT ADDRESS VAR]<br>[VAR] Miles Away<br><div class="buttons"><pre><span onclick="infoBoxDirections()">Directions</span>                            <span onclick="closeInfoBox()">Close</span></pre></div></td>
+                <td id = "tLeft1" class="tLeft">11<br>Bikes</td>
+                <td id="infoBx" class="tRight" colspan="2" rowspan="2"><div class="tableTitle">[INSERT TITLE VAR]</div>[INSERT ADDRESS VAR]<br>[VAR] Miles Away<br><div class="buttons"><pre><span onclick="closeInfoBox()">Close</span>                            <span onclick="infoBoxDirections()">Directions</span></pre></div></td>
             </tr>
-            <tr>
-                <td id ="tLeft2" class="tLeft2">12<br>Empty Docks</td>
+            <tr style="border-top: rgba(0, 46, 97, 1) 2px solid;">
+                <td id ="tLeft2" class="tLeft">12<br>Empty Docks</td>
             </tr>
         </table>
     </div>
@@ -127,52 +127,46 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 	// <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
 	var station_array = [];
+    var origin_place_id = null;
+    var destination_place_id = null;
+    var origin_input;
+    var destination_input;
+    var origin_autocomplete;
+    var destination_autocomplete;
 
-	function initMap() {
-		var origin_place_id = null;
-		var destination_place_id = null;
-		var travel_mode = google.maps.TravelMode.BICYCLING;
-		var map = new google.maps.Map(document.getElementById('map'), {
+    var map;
+    var pos;
+    var geocoder;
+
+    var directionsService;
+    var directionsDisplay;
+
+    var travel_mode;
+
+    function initMap() {
+		travel_mode = google.maps.TravelMode.BICYCLING;
+        map = new google.maps.Map(document.getElementById('map'), {
 			mapTypeControl: false,
 			center: {lat: 39.76593, lng: -86.16216},
 			zoom: 13
 		});
-		var directionsService = new google.maps.DirectionsService;
-		var directionsDisplay = new google.maps.DirectionsRenderer;
+        geocoder = new google.maps.Geocoder;
+
+		directionsService = new google.maps.DirectionsService;
+		directionsDisplay = new google.maps.DirectionsRenderer;
 		directionsDisplay.setMap(map);
 
-		var origin_input = document.getElementById('origin-input');
-		var destination_input = document.getElementById('destination-input');
+		origin_input = document.getElementById('origin-input');
+		destination_input = document.getElementById('destination-input');
 
 		map.controls[google.maps.ControlPosition.TOP_CENTER].push(origin_input);
 		map.controls[google.maps.ControlPosition.TOP_CENTER].push(destination_input);
 
-		var origin_autocomplete = new google.maps.places.Autocomplete(origin_input);
+		origin_autocomplete = new google.maps.places.Autocomplete(origin_input);
 		origin_autocomplete.bindTo('bounds', map);
 
-		var destination_autocomplete = new google.maps.places.Autocomplete(destination_input);
+		destination_autocomplete = new google.maps.places.Autocomplete(destination_input);
 		destination_autocomplete.bindTo('bounds', map);
-
-		function geocodeLatLng(geocoder, map, infowindow, pos) {
-
-			geocoder.geocode({'location': pos}, function(results, status) {
-				if (status === google.maps.GeocoderStatus.OK) {
-					if (results[1]) {
-						map.setZoom(14);
-
-						origin_place_id = results[1].place_id;
-						origin_autocomplete.getPlace();
-
-						document.getElementById('origin-input').value = results[1].formatted_address;
-						//infowindow.open(map, marker);
-					} else {
-						window.alert('No results found');
-					}
-				} else {
-					window.alert('Geocoder failed due to: ' + status);
-				}
-			});
-		}
 
 		function expandViewportToFitPlace(map, place) {
 			if (place.geometry.viewport) {
@@ -232,14 +226,11 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 		}
 
 		var stats = getBikeStations(map);
-		var infoWindow = new google.maps.InfoWindow({map: map});
-		var geocoder = new google.maps.Geocoder;
-		var infowindow = new google.maps.InfoWindow;
 
 		// Try HTML5 geolocation.
 		if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(function(position) {
-				var pos = {
+				pos = {
 					lat: position.coords.latitude,
 					lng: position.coords.longitude
 				};
@@ -248,12 +239,11 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 
 				// SETS INPUT BOX TEXT
 				// Search for current location placeId
-				geocodeLatLng(geocoder, map, infowindow, pos);
+				geocodeLatLng(geocoder, map, pos, 'origin-input');
 
 				var closest = 99999;
 				var closeststation = 0;
 				for (var i = 0; i < station_array.length; i++) {
-
 					var distance_lat = pos.lat - station_array[i].getPosition().lat();
 					var distance_lng = pos.lng - station_array[i].getPosition().lng();
 					var distance = Math.sqrt(distance_lat * distance_lat + distance_lng * distance_lng);
@@ -287,6 +277,32 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			handleLocationError(false, infoWindow, map.getCenter());
 		}
 	}
+
+    function geocodeLatLng(geocoder, map, pos, inputBox) {
+        geocoder.geocode({'location': pos}, function(results, status) {
+            if (status === google.maps.GeocoderStatus.OK) {
+                if (results[1]) {
+                    map.setZoom(14);
+
+                    if (inputBox=='origin-input') {
+                        origin_place_id = results[1].place_id;
+                        origin_autocomplete.getPlace();
+                    }
+                    else {
+                        destination_place_id = results[1].place_id;
+                        destination_autocomplete.getPlace();
+                    }
+
+                    document.getElementById(inputBox).value = results[1].formatted_address;
+                    //infowindow.open(map, marker);
+                } else {
+                    window.alert('No results found');
+                }
+            } else {
+                window.alert('Geocoder failed due to: ' + status);
+            }
+        });
+    }
 
 	function handleLocationError(browserHasGeolocation, infoWindow, pos) {
 		infoWindow.setPosition(pos);
@@ -327,6 +343,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			google.maps.event.addListener(marker, 'click', function () {
 				getBikeStatus(this);
                 openInfoBox(this.getTitle(), this.getTitle(), this.getTitle(), this.bikes_avail, this.docks_avail);
+                pos = this.position;
 			});
 
 		}
@@ -355,7 +372,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
     function openInfoBox(title, addr, miles, bikes, docks) {
         document.getElementById("mapContainer").style.height= '72vh';
         document.getElementById("map").style.height= '66%';
-        document.getElementById("infoBx").innerHTML = "<div class='tableTitle'>"+title+"</div>"+addr+"<br>"+"#"+" Miles Away<br><div class='buttons'><pre><span onclick='infoBoxDirections()'>Directions</span>                            <span onclick='closeInfoBox()'>Close</span></pre></div>";
+        document.getElementById("infoBx").innerHTML = "<div class='tableTitle'>"+title+"</div>"+addr+"<br>"+"#"+" Miles Away<br><div class='buttons'><pre><span onclick='closeInfoBox()'>Close</span>                            <span onclick='infoBoxDirections()'>Directions</span></pre></div>";
         document.getElementById("tLeft1").innerHTML = bikes+"<br>Bikes";
         document.getElementById("tLeft2").innerHTML = docks+"<br>Docks";
     }
@@ -366,7 +383,40 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
     }
 
     function infoBoxDirections() {
+		geocodeLatLng(geocoder, map, pos, 'destination-input');
+		// Try HTML5 geolocation.
+		if (navigator.geolocation) {
+			navigator.geolocation.getCurrentPosition(function(position) {
+				var org = {
+					lat: position.coords.latitude,
+					lng: position.coords.longitude
+				};
+				//infoWindow.setPosition(pos);
+				map.setCenter(org);
 
+				// SETS INPUT BOX TEXT
+				// Search for current location placeId
+				geocodeLatLng(geocoder, map, org, 'origin-input');
+
+				directionsService.route({
+					origin: org,
+					destination: {'placeId': destination_place_id},
+					travelMode: travel_mode
+				}, function(response, status) {
+					if (status === google.maps.DirectionsStatus.OK) {
+                        directionsDisplay.setDirections(response);
+					} else {
+						window.alert('Directions request failed due to ' + status);
+					}
+				});
+
+			}, function() {
+				handleLocationError(true, infoWindow, map.getCenter());
+			});
+		} else {
+			// Browser doesn't support Geolocation
+			handleLocationError(false, infoWindow, map.getCenter());
+		}
     }
 </script>
 
