--- a/IndyGo/www/login.html
+++ b/IndyGo/www/login.html
@@ -26,6 +26,15 @@
 <header id="header" class="alt">
     <nav id="nav">
         <ul>
+            <li>
+                <div id="profile">
+                    <h7>John Roberts</h7>
+                    <p>view profile</p>
+                </div>
+                <div><img src="images/ppic.png" alt="profile pic"></div>
+
+                <!-- <a href="generic.html">Profile</a> -->
+            </li>
             <li><a href="index.html">BikeShare</a></li>
             <li><a href="bus.html">IndyGo</a></li>
             <li><a href="login.html">Payment</a></li>
