--- a/IndyGo/www/bus.html
+++ b/IndyGo/www/bus.html
@@ -1,54 +1,21 @@
-<!DOCTYPE HTML>
-<!--
-	Spatial by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="refresh" content="0; url=http://buy.indygo.net/" />
     <title>Pay</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Asian, Student, Union, United, ASU, IUPUI, Heritage, Month, Contact Us, Contact" />
-    <meta name="description" content="If you would like to partner with the ASU for an event then please contact us! We are always looking for new partnerships. Email us and describe the event and how it would benefit the campus." />
-    <!--[if lte IE 8]>
-    <script src="js/html5shiv.js"></script><![endif]-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/skel.min.js"></script>
-    <script src="js/skel-layers.min.js"></script>
-    <script src="js/init.js"></script>
-    <noscript>
-        <link rel="stylesheet" href="css/skel.css" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/style-xlarge.css" />
-    </noscript>
+    <style type="text/css">
+        body, html
+        {
+            margin: 0; padding: 0; height: 100%; overflow: hidden;
+        }
+
+        #content
+        {
+            position:absolute; left: 0; right: 0; bottom: 0; top: 0px;
+        }
+    </style>
 </head>
-<body class="landing">
-
-<!-- Header -->
-<header id="header" class="alt">
-    <nav id="nav">
-        <ul>
-            <li><a href="index.html">BikeShare</a></li>
-            <li><a href="bus.html">IndyGo</a></li>
-            <li><a href="login.html">Payment</a></li>
-        </ul>
-    </nav>
-</header>
-
-<a name="formAnchor"></a>
-<!-- One -->
-<section id="one" class="wrapper style1">
-    <div class="container 75%">
-        <div>
-            <h2>
-            </h2>
-        </div>
-    </div>
-</section>
-
-<!-- Next line makes the footer -->
-<?php footer(); ?>
-
+<body>
+<div id="content">
+    <iframe width="100%" height="100%" frameborder="0" src="http://buy.indygo.net/" />
+</div>
 </body>
 </html>
