I got buses to do things

--- a/IndyGo/platforms/browser/www/busmap.html
+++ b/IndyGo/platforms/browser/www/busmap.html
@@ -89,7 +89,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				<!-- <a href="generic.html">Profile</a> -->
 			</li>
 			<li><a href="index.html">BikeShare</a></li>
-			<li><a href="busmap.html">IndyGo</a></li>
+			<li><a href="bus.html">IndyGo</a></li>
 			<li><a href="login.html">Payment</a></li>
 		</ul>
 	</nav>
@@ -120,13 +120,12 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 
 <section id="two">
 </section>
+<script type="text/javascript" src="js/gtfsparser.js"></script>
 <script>
 	// This example requires the Places library. Include the libraries=places
 	// parameter when you first load the API. For example:
 	// <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
-
-		var station_array = [];
 		var bus_array = [];
     var origin_place_id = null;
     var destination_place_id = null;
@@ -226,80 +225,27 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			});
 		}
 
-		var stats = getBikeStations(map);
+		var livebus = localStorage.getItem("busdata");
+		console.log(livebus);
+		createBusPins(livebus);
 
-		var livebus = readDropbox("https://dl.dropbox.com/s/o5ajnzozjend26q/gtfs_data.json?dl=1");
-
-		function createBusPins(map, livebus) {
+		function createBusPins(stations) {
 			for (i = 0; i < livebus.length; i++) {
 				var myLatLng = livebus[i].pos;
 				var marker = new google.maps.Marker({
-					position: {lat: Number(livebus[i].pos.lat), lng: Number(livebus[i].pos.lng)},
+					position: myLatLng,
 					map: map,
 					title: livebus[i].vehicle,
-					icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
 				});
 				bus_array[i] = marker;
-
-				google.maps.event.addListener(marker, 'click', function () {
-					getBikeStatus(this);
-	                openInfoBox(this.title, this.addr, this.title, null, null);
-	                pos = this.position;
-				});
+				//
+				// google.maps.event.addListener(marker, 'click', function () {
+				// 	getBikeStatus(this);
+	      //           openInfoBox(this.getTitle(), this.addr, this.getTitle(), this.bikes_avail, this.docks_avail);
+	      //           pos = this.position;
+				// });
 
 			}
-		}
-
-		function readDropbox(sURL)
-		{
-				var xmlhttp = new XMLHttpRequest();
-				xmlhttp.open('GET', sURL, true);
-				xmlhttp.onreadystatechange = function() {
-					if (xmlhttp.readyState == 4) {
-						if(xmlhttp.status == 200) {
-		          console.log(xmlhttp.responseText);
-							createBusPins(map, parseGTFS(xmlhttp.responseText));
-							return;
-						}
-					}
-				};
-				xmlhttp.send(null);
-		}
-
-		function Trip(trip_id, lat, lng, time, vehicle) {
-		    this.trip_id = trip_id;
-		    this.pos = {lat: lat, lng: lng}
-		    this.timestamp = time;
-		    this.vehicle = vehicle;
-		}
-
-		function parseGTFS(response) {
-		    var strarr = response.split("\n"); // remove spaces
-		    // console.log(strarr);
-		    var i = 0, k = 0;
-
-		    // console.log(strarr[i+1].split("\"")[1]); // gets trip_id
-		    // console.log(strarr[i+4].replace('\"', '').split(':')[1].replace(' ', '')); // gets latitude
-		    // console.log(strarr[i+5].replace('\"', '').split(':')[1].replace(' ', '')); // gets longitude
-		    // console.log(strarr[i+7].split(':')[1].replace(' ', '')); // gets timestamp
-		    // console.log(strarr[i+9].split(' ')[3].replace("\"", '').replace("\"", '')); // gets vehicle label
-
-		    var trip_array = [];
-
-		    while (i+10 < strarr.length) {
-		          var trip_id = strarr[i+1].split("\"")[1];
-		          var lat = strarr[i+4].replace('\"', '').split(':')[1].replace(' ', '');
-		          var lng = strarr[i+5].replace('\"', '').split(':')[1].replace(' ', '');
-		          var time = strarr[i+7].split(':')[1].replace(' ', '');
-		          var vehicle = strarr[i+9].split(' ')[3].replace("\"", '').replace("\"", '');
-
-		         trip_array[k++] = new Trip(trip_id, lat, lng, time, vehicle);
-
-		         i+=11;
-		     }
-
-		      console.log(trip_array);
-		      return(trip_array);
 		}
 
 		// Try HTML5 geolocation.
@@ -315,34 +261,6 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				// SETS INPUT BOX TEXT
 				// Search for current location placeId
 				geocodeLatLng(geocoder, map, pos, 'origin-input');
-
-				var closest = 99999;
-				var closeststation = 0;
-				for (var i = 0; i < station_array.length; i++) {
-					var distance_lat = pos.lat - station_array[i].getPosition().lat();
-					var distance_lng = pos.lng - station_array[i].getPosition().lng();
-					var distance = Math.sqrt(distance_lat * distance_lat + distance_lng * distance_lng);
-
-					if (distance < closest) {
-						closest = distance;
-						closeststation = i;
-					}
-				}
-
-				directionsService.route({
-					origin: pos,
-					destination: station_array[closeststation].getPosition(),
-					travelMode: travel_mode
-				}, function(response, status) {
-					if (status === google.maps.DirectionsStatus.OK) {
-						directionsDisplay.setDirections(response);
-					} else {
-						window.alert('Directions request failed due to ' + status);
-					}
-				});
-
-				station_array[closeststation].setVisible(false);
-
 
 			}, function() {
 				handleLocationError(true, infoWindow, map.getCenter());
@@ -386,62 +304,6 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				'Error: Your browser doesn\'t support geolocation.');
 	}
 
-	function getBikeStations(map) {
-		var xmlhttp = new XMLHttpRequest();
-		xmlhttp.open('GET', 'https://gbfs.bcycle.com/bcycle_pacersbikeshare/station_information.json', true);
-		xmlhttp.onreadystatechange = function() {
-			if (xmlhttp.readyState == 4) {
-				if(xmlhttp.status == 200) {
-					var obj = JSON.parse(xmlhttp.responseText);
-					createBikePins(map, obj.data);
-					return obj.data;
-				}
-			}
-		};
-		xmlhttp.send(null);
-	}
-
-	function createBikePins(map, stations) {
-		for (i = 0; i < 27; i++) {
-			var myLatLng = {lat: stations.stations[i].lat, lng: stations.stations[i].lon};
-			var marker = new google.maps.Marker({
-				position: myLatLng,
-				map: map,
-				title: stations.stations[i].name,
-				station_id: stations.stations[i].station_id,
-				bikes_avail: 0,
-				docks_avail: 0,
-                addr: stations.stations[i].address
-			});
-			station_array[i] = marker;
-
-			google.maps.event.addListener(marker, 'click', function () {
-				getBikeStatus(this);
-                openInfoBox(this.getTitle(), this.addr, this.getTitle(), this.bikes_avail, this.docks_avail);
-                pos = this.position;
-			});
-
-		}
-	}
-
-	function getBikeStatus(marker) {
-		var xmlhttp = new XMLHttpRequest();
-		xmlhttp.open('GET', 'https://gbfs.bcycle.com/bcycle_pacersbikeshare/station_status.json', false);
-		xmlhttp.onreadystatechange = function() {
-			if (xmlhttp.readyState == 4) {
-				if(xmlhttp.status == 200) {
-					var obj = JSON.parse(xmlhttp.responseText);
-					for (var i = 0; i < 27; i++) {
-						if (obj.data.stations[i].station_id === marker.station_id) {
-							marker.bikes_avail = obj.data.stations[i].num_bikes_available;
-							marker.docks_avail = obj.data.stations[i].num_docks_available;
-						}
-					}
-				}
-			}
-		};
-		xmlhttp.send(null);
-	}
 
     function openInfoBox(title, addr, miles, bikes, docks) {
         document.getElementById("mapContainer").style.height= '72vh';
