--- a/IndyGo/platforms/browser/www/index.html
+++ b/IndyGo/platforms/browser/www/index.html
@@ -89,7 +89,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				<!-- <a href="generic.html">Profile</a> -->
 			</li>
 			<li><a href="index.html">BikeShare</a></li>
-			<li><a href="bus.html">IndyGo</a></li>
+			<li><a href="busmap.html">IndyGo</a></li>
 			<li><a href="login.html">Payment</a></li>
 		</ul>
 	</nav>
@@ -120,15 +120,14 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 
 <section id="two">
 </section>
-<script type="text/javascript" src="js/gtfsparser.js"></script>
 <script>
 	// This example requires the Places library. Include the libraries=places
 	// parameter when you first load the API. For example:
 	// <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
-		readDropbox("https://dl.dropbox.com/s/o5ajnzozjend26q/gtfs_data.json?dl=1");
 
 		var station_array = [];
+		var bus_array = [];
     var origin_place_id = null;
     var destination_place_id = null;
     var origin_input;
@@ -229,6 +228,80 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 
 		var stats = getBikeStations(map);
 
+		var livebus = readDropbox("https://dl.dropbox.com/s/o5ajnzozjend26q/gtfs_data.json?dl=1");
+
+		function createBusPins(map, livebus) {
+			for (i = 0; i < livebus.length; i++) {
+				var myLatLng = livebus[i].pos;
+				var marker = new google.maps.Marker({
+					position: {lat: Number(livebus[i].pos.lat), lng: Number(livebus[i].pos.lng)},
+					map: map,
+					title: livebus[i].vehicle,
+					icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
+				});
+				bus_array[i] = marker;
+
+				google.maps.event.addListener(marker, 'click', function () {
+					getBikeStatus(this);
+	                openInfoBox(this.title, this.addr, this.title, null, null);
+	                pos = this.position;
+				});
+
+			}
+		}
+
+		function readDropbox(sURL)
+		{
+				var xmlhttp = new XMLHttpRequest();
+				xmlhttp.open('GET', sURL, true);
+				xmlhttp.onreadystatechange = function() {
+					if (xmlhttp.readyState == 4) {
+						if(xmlhttp.status == 200) {
+		          console.log(xmlhttp.responseText);
+							createBusPins(map, parseGTFS(xmlhttp.responseText));
+							return;
+						}
+					}
+				};
+				xmlhttp.send(null);
+		}
+
+		function Trip(trip_id, lat, lng, time, vehicle) {
+		    this.trip_id = trip_id;
+		    this.pos = {lat: lat, lng: lng}
+		    this.timestamp = time;
+		    this.vehicle = vehicle;
+		}
+
+		function parseGTFS(response) {
+		    var strarr = response.split("\n"); // remove spaces
+		    // console.log(strarr);
+		    var i = 0, k = 0;
+
+		    // console.log(strarr[i+1].split("\"")[1]); // gets trip_id
+		    // console.log(strarr[i+4].replace('\"', '').split(':')[1].replace(' ', '')); // gets latitude
+		    // console.log(strarr[i+5].replace('\"', '').split(':')[1].replace(' ', '')); // gets longitude
+		    // console.log(strarr[i+7].split(':')[1].replace(' ', '')); // gets timestamp
+		    // console.log(strarr[i+9].split(' ')[3].replace("\"", '').replace("\"", '')); // gets vehicle label
+
+		    var trip_array = [];
+
+		    while (i+10 < strarr.length) {
+		          var trip_id = strarr[i+1].split("\"")[1];
+		          var lat = strarr[i+4].replace('\"', '').split(':')[1].replace(' ', '');
+		          var lng = strarr[i+5].replace('\"', '').split(':')[1].replace(' ', '');
+		          var time = strarr[i+7].split(':')[1].replace(' ', '');
+		          var vehicle = strarr[i+9].split(' ')[3].replace("\"", '').replace("\"", '');
+
+		         trip_array[k++] = new Trip(trip_id, lat, lng, time, vehicle);
+
+		         i+=11;
+		     }
+
+		      console.log(trip_array);
+		      return(trip_array);
+		}
+
 		// Try HTML5 geolocation.
 		if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(function(position) {
@@ -301,7 +374,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
                     window.alert('No results found');
                 }
             } else {
-                window.alert('Geocoder failed due to: ' + status);
+                //window.alert('Geocoder failed due to: ' + status);
             }
         });
     }
@@ -337,14 +410,14 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				title: stations.stations[i].name,
 				station_id: stations.stations[i].station_id,
 				bikes_avail: 0,
-				docks_avail: 0
+				docks_avail: 0,
+                addr: stations.stations[i].address
 			});
-
 			station_array[i] = marker;
 
 			google.maps.event.addListener(marker, 'click', function () {
 				getBikeStatus(this);
-                openInfoBox(this.getTitle(), this.getTitle(), this.getTitle(), this.bikes_avail, this.docks_avail);
+                openInfoBox(this.getTitle(), this.addr, this.getTitle(), this.bikes_avail, this.docks_avail);
                 pos = this.position;
 			});
 
@@ -358,7 +431,6 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			if (xmlhttp.readyState == 4) {
 				if(xmlhttp.status == 200) {
 					var obj = JSON.parse(xmlhttp.responseText);
-					var bikestatus;
 					for (var i = 0; i < 27; i++) {
 						if (obj.data.stations[i].station_id === marker.station_id) {
 							marker.bikes_avail = obj.data.stations[i].num_bikes_available;
@@ -374,7 +446,9 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
     function openInfoBox(title, addr, miles, bikes, docks) {
         document.getElementById("mapContainer").style.height= '72vh';
         document.getElementById("map").style.height= '66%';
-        document.getElementById("infoBx").innerHTML = "<div class='tableTitle'>"+title+"</div>"+addr+"<br>"+"#"+" Miles Away<br><div class='buttons'><pre><span onclick='closeInfoBox()'>Close</span>                            <span onclick='infoBoxDirections()'>Directions</span></pre></div>";
+
+		infoBoxDirections(false, title, addr, miles);
+
         document.getElementById("tLeft1").innerHTML = bikes+"<br>Bikes";
         document.getElementById("tLeft2").innerHTML = docks+"<br>Docks";
     }
@@ -384,10 +458,11 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
         document.getElementById("map").style.height= '72%';
     }
 
-    function infoBoxDirections() {
+    function infoBoxDirections(display, title, addr, miles) {
 		geocodeLatLng(geocoder, map, pos, 'destination-input');
 		// Try HTML5 geolocation.
-		if (navigator.geolocation) {
+        document.getElementById("infoBx").innerHTML = "<div class='tableTitle'>"+title+"</div>"+addr+"<br>N/A Miles Away<br><div class='buttons'><pre><span onclick='closeInfoBox()'>Close</span>                            <span onclick='infoBoxDirections(true," + title + ", " + addr + ", " + miles + ")'>Directions</span></pre></div>";
+        if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(function(position) {
 				var org = {
 					lat: position.coords.latitude,
@@ -406,14 +481,20 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 					travelMode: travel_mode
 				}, function(response, status) {
 					if (status === google.maps.DirectionsStatus.OK) {
-                        directionsDisplay.setDirections(response);
+                        if (display==true) {
+                            directionsDisplay.setDirections(response);
+                        }
+                        else {
+                            document.getElementById("infoBx").innerHTML = "<div class='tableTitle'>"+title+"</div>"+addr+"<br>"+ (response.routes[0].legs[0].distance.value*0.000621371).toFixed(2) +" Miles Away<br><div class='buttons'><pre><span onclick='closeInfoBox()'>Close</span>                            <span onclick='infoBoxDirections(true, "+title+", "+addr+", "+miles+")'>Directions</span></pre></div>";
+                        }
 					} else {
 						window.alert('Directions request failed due to ' + status);
 					}
 				});
 
 			}, function() {
-				handleLocationError(true, infoWindow, map.getCenter());
+                document.getElementById("infoBx").innerHTML = "<div class='tableTitle'>"+title+"</div>"+addr+"<br>N/A Miles Away<br><div class='buttons'><pre><span onclick='closeInfoBox()'>Close</span>                            <span onclick='infoBoxDirections(true," + title + ", " + addr + ", " + miles + ")'>Directions</span></pre></div>";
+                handleLocationError(true, infoWindow, map.getCenter());
 			});
 		} else {
 			// Browser doesn't support Geolocation
