--- a/IndyGo/platforms/browser/www/index.html
+++ b/IndyGo/platforms/browser/www/index.html
@@ -90,7 +90,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				<!-- <a href="generic.html">Profile</a> -->
 			</li>
 			<li><a href="index.html">BikeShare</a></li>
-			<li><a href="busmap.html">IndyGo</a></li>
+			<li><a href="bus.html">IndyGo</a></li>
 			<li><a href="login.html">Payment</a></li>
 		</ul>
 	</nav>
@@ -169,7 +169,9 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
         map = new google.maps.Map(document.getElementById('map'), {
             mapTypeControl: false,
             center: {lat: 39.76593, lng: -86.16216},
-            zoom: 13
+            zoom: 13,
+            zoomControl: false,
+            streetViewControl: false
         });
         geocoder = new google.maps.Geocoder;
 
