--- a/IndyGo/www/index.html
+++ b/IndyGo/www/index.html
@@ -77,7 +77,6 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 </nav>
 </header> -->
 <header id="header" class="alt">
-<<<<<<< HEAD
 	<nav id="nav">
 		<ul>
 			<li>
@@ -94,24 +93,6 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<li><a href="login.html">Payment</a></li>
 		</ul>
 	</nav>
-=======
-    <nav id="nav">
-        <ul>
-            <li>
-                <div id="profile">
-                    <h7>John Roberts</h7>
-                    <p>view profile</p>
-                </div>
-                <div><img src="images/ppic.png" alt="profile pic"></div>
-
-                <!-- <a href="generic.html">Profile</a> -->
-            </li>
-            <li><a href="index.html">BikeShare</a></li>
-            <li><a href="bus.html">IndyGo</a></li>
-            <li><a href="login.html">Payment</a></li>
-        </ul>
-    </nav>
->>>>>>> 9fc33386930f05929e8d8c425f2ba4558ef221b3
 </header>
 
 <!-- One -->
@@ -144,8 +125,8 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
     // parameter when you first load the API. For example:
     // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
-		var station_array = [];
-		var bus_array = [];
+    var station_array = [];
+	var bus_array = [];
     var origin_place_id = null;
     var destination_place_id = null;
     var origin_input;
@@ -434,6 +415,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
                 position: myLatLng,
                 map: map,
                 title: stations.stations[i].name,
+                //icon: 'images/BikeMarker.png',
                 station_id: stations.stations[i].station_id,
                 bikes_avail: 0,
                 docks_avail: 0,
